--- a/legal.html
+++ b/legal.html
@@ -86,23 +86,85 @@
     </section>
 
     <article class="legal-content">
-      <section id="privacy">
-        <h2>Privacybeleid</h2>
-        <p>Hier komt uw privacybeleid. Beschrijf hoe u omgaat met de persoonlijke gegevens van uw websitebezoekers, welke data u verzamelt via het contactformulier, en voor welke doeleinden deze gegevens worden gebruikt.</p>
-        <p>Vergeet niet te vermelden hoe gebruikers hun gegevens kunnen inzien, aanpassen of laten verwijderen.</p>
+     <section id="privacy">
+<h2>Privacybeleid</h2>
+<p><strong>Laatst bijgewerkt op: 7 oktober 2025</strong></p>
+<p>Buscemi Group hecht groot belang aan uw privacy. Dit privacybeleid beschrijft welke persoonlijke gegevens we verzamelen en hoe we deze gebruiken, delen en beschermen.</p>
+
+<h3>Welke gegevens verzamelen we?</h3>
+<p>We kunnen de volgende informatie verzamelen wanneer u onze website gebruikt of contact met ons opneemt:</p>
+<ul>
+<li><strong>Contactinformatie:</strong> Uw naam, e-mailadres, en eventueel uw bedrijfsnaam, die u ons verstrekt via het contactformulier.</li>
+<li><strong>Analytische gegevens:</strong> Anonieme gegevens over uw surfgedrag, zoals de pagina's die u bezoekt en de duur van uw bezoek. Deze gegevens worden verzameld via Google Analytics, zoals gespecificeerd in ons cookiebeleid.</li>
+</ul>
+
+<h3>Hoe gebruiken we uw gegevens?</h3>
+<p>De verzamelde gegevens worden gebruikt voor de volgende doeleinden:</p>
+<ul>
+<li>Om te reageren op uw vragen en verzoeken die via het contactformulier worden ingediend.</li>
+<li>Om onze website en diensten te verbeteren door het analyseren van anonieme gebruikersstatistieken.</li>
+<li>Om te voldoen aan onze wettelijke en reglementaire verplichtingen.</li>
+</ul>
+
+<h3>Uw rechten</h3>
+<p>U heeft het recht om uw persoonlijke gegevens in te zien, te corrigeren of te laten verwijderen. U kunt hiervoor contact met ons opnemen via <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a>. We zullen uw verzoek binnen een redelijke termijn behandelen.</p>
+</section>
       </section>
 
-      <section id="cookies">
-        <h2>Cookiebeleid</h2>
-        <p>Hier komt uw cookiebeleid. Leg uit welke cookies uw website gebruikt. Bijvoorbeeld de functionele cookie voor de cookie-banner zelf, en de analytische cookies (zoals Plausible) die u gebruikt om het websiteverkeer te meten.</p>
-        <p>U kunt hier ook de knop plaatsen waarmee gebruikers hun cookie-voorkeuren kunnen aanpassen: <strong><a href="#" id="manage-consent">Beheer cookie-voorkeuren</a></strong>.</p>
+      
+       <section id="cookies">
+<h2>Cookiebeleid</h2>
+<p>Onze website gebruikt cookies om uw gebruikerservaring te verbeteren. Een cookie is een klein tekstbestand dat op uw computer wordt opgeslagen. Hieronder leggen we uit welke cookies we gebruiken.</p>
+
+<h3>Soorten cookies</h3>
+<ul>
+<li><strong>Functionele cookies:</strong> Deze zijn noodzakelijk voor de basisfunctionaliteit van de website. We gebruiken een functionele cookie om uw cookie-voorkeuren op te slaan, zodat u deze niet bij elk bezoek opnieuw hoeft in te stellen.</li>
+<li><strong>Analytische cookies:</strong> We gebruiken Google Analytics om anoniem te meten hoe bezoekers onze website gebruiken. Dit helpt ons om de website te verbeteren. De tracking wordt pas geactiveerd na uw expliciete toestemming.</li>
+</ul>
+
+<h3>Beheer uw voorkeuren</h3>
+<p>U kunt uw cookie-instellingen op elk moment wijzigen. Klik op de onderstaande link om uw voorkeuren aan te passen.</p>
+<p><strong><a href="#" id="manage-consent">Beheer cookie-voorkeuren</a></strong></p>
+</section>
       </section>
       
-      <section id="voorwaarden">
-        <h2>Algemene Voorwaarden</h2>
-        <p>Hier komen uw algemene voorwaarden. Dit is de plaats om de juridische afspraken tussen Buscemi Group en haar klanten te detailleren. Denk aan betalingsvoorwaarden, aansprakelijkheid, intellectueel eigendom, en de procedure bij geschillen.</p>
-        <p>Dit is een placeholder tekst. U dient deze te vervangen door uw eigen, rechtsgeldige algemene voorwaarden.</p>
-      </section>
+   <section id="voorwaarden">
+<h2>Algemene Voorwaarden</h2>
+<p><strong>1. Toepasselijkheid</strong>
+
+
+Deze algemene voorwaarden zijn van toepassing op alle diensten, offertes en overeenkomsten van Buscemi Group, tenzij schriftelijk anders is overeengekomen.</p>
+
+<p><strong>2. Offertes en overeenkomsten</strong>
+
+
+Alle offertes zijn vrijblijvend. Een overeenkomst komt tot stand op het moment dat de door de klant ondertekende offerte door Buscemi Group is ontvangen en aanvaard.</p>
+
+<p><strong>3. Uitvoering van de dienstverlening</strong>
+
+
+Buscemi Group zal zich naar beste vermogen inspannen om de diensten met zorg uit te voeren. De opgegeven termijnen zijn indicatief en niet bindend.</p>
+
+<p><strong>4. Tarieven en betaling</strong>
+
+
+De tarieven worden vastgelegd in de offerte. Facturen zijn betaalbaar binnen 30 dagen na factuurdatum. Bij niet-tijdige betaling is van rechtswege en zonder ingebrekestelling een verwijlinterest verschuldigd.</p>
+
+<p><strong>5. Aansprakelijkheid</strong>
+
+
+De aansprakelijkheid van Buscemi Group is beperkt tot het bedrag dat in het desbetreffende geval door haar beroepsaansprakelijkheidsverzekering wordt uitgekeerd. Buscemi Group is nooit aansprakelijk voor indirecte schade, zoals gederfde winst.</p>
+
+<p><strong>6. Intellectuele eigendom</strong>
+
+
+Alle intellectuele eigendomsrechten op de door Buscemi Group ontwikkelde materialen (strategieën, rapporten, creaties) blijven eigendom van Buscemi Group, tenzij anders overeengekomen.</p>
+
+<p><strong>7. Toepasselijk recht en geschillen</strong>
+
+
+Op alle rechtsverhoudingen tussen Buscemi Group en de klant is het Belgisch recht van toepassing. Uitsluitend de rechtbanken van het arrondissement waar de maatschappelijke zetel van Buscemi Group gevestigd is, zijn bevoegd om kennis te nemen van eventuele geschillen.</p>
+</section>
     </article>
   </main>
 
