--- a/diensten/marketing.html
+++ b/diensten/marketing.html
@@ -68,13 +68,24 @@
         <div class="section-header">
           <h2>Een geïntegreerde aanpak</h2>
         </div>
-        <div class="services-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
-          <div class="card service-detail-card"><h3>Strategie & Positionering</h3><p>We definiëren uw doelgroep, unieke waardepropositie en optimale kanalenmix voor maximale impact.</p></div>
-          <div class="card service-detail-card"><h3>Content & Creatie</h3><p>Copywriting, visuals en video die uw merkverhaal vertellen en uw doelgroep activeren.</p></div>
-          <div class="card service-detail-card"><h3>Social & Advertising</h3><p>Resultaatgerichte campagnes op Meta, LinkedIn en Google Ads, geoptimaliseerd voor conversie.</p></div>
-          <div class="card service-detail-card"><h3>SEO & SEA</h3><p>Maximale online zichtbaarheid door een combinatie van technische SEO, content en autoriteit.</p></div>
-          <div class="card service-detail-card"><h3>E-mail & Automations</h3><p>We bouwen geautomatiseerde flows die leads nurturen, klanten binden en verkoop stimuleren.</p></div>
-          <div class="card service-detail-card"><h3>Analytics & KPI’s</h3><p>Heldere dashboards (GA4/GTM), A/B-testen en rapportages die inzicht en richting geven.</p></div>
+<div class="services-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
+  <div class="card service-detail-card">
+    <h3>Marketingplan op maat</h3>
+    <p>We ontwikkelen een helder en haalbaar marketingplan dat perfect aansluit bij uw bedrijfsdoelen en budget.</p>
+  </div>
+  <div class="card service-detail-card">
+    <h3>Digitale Marketing</h3>
+    <p>De focus ligt op online resultaat. Van strategie en contentcreatie tot het opzetten van gerichte advertentiecampagnes.</p>
+  </div>
+  <div class="card service-detail-card">
+    <h3>SEO (Zoekmachineoptimalisatie)</h3>
+    <p>We verbeteren uw vindbaarheid in Google, zodat potentiële klanten u organisch vinden wanneer ze u nodig hebben.</p>
+  </div>
+  <div class="card service-detail-card">
+    <h3>Sociale Media</h3>
+    <p>We creëren en onderhouden uw sociale mediakanalen met content die uw doelgroep aanspreekt en engageert.</p>
+  </div>
+</div>
         </div>
       </div>
     </section>
