--- a/diensten/consultancy.html
+++ b/diensten/consultancy.html
@@ -68,13 +68,32 @@
         <div class="section-header">
           <h2>Hoe we uw bedrijf versterken</h2>
         </div>
-        <div class="services-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
-          <div class="card service-detail-card"><h3>Strategische Roadmap</h3><p>We vertalen uw visie naar een helder kwartaalplan met concrete doelen, KPI's en prioriteiten.</p></div>
-          <div class="card service-detail-card"><h3>Procesoptimalisatie</h3><p>We stroomlijnen uw workflows van A tot Z om tijdverlies en operationele frictie te elimineren.</p></div>
-          <div class="card service-detail-card"><h3>Kostenanalyse</h3><p>Een diepgaande analyse van uw uitgavenstructuur om onnodige kosten te schrappen en marges te verhogen.</p></div>
-          <div class="card service-detail-card"><h3>Data & Rapportering</h3><p>We transformeren complexe data naar intuïtieve dashboards die sturen op de juiste inzichten.</p></div>
-          <div class="card service-detail-card"><h3>Tooling & Automatisering</h3><p>We selecteren en implementeren de juiste software om manueel werk te reduceren en efficiëntie te boosten.</p></div>
-          <div class="card service-detail-card"><h3>Change Management</h3><p>We begeleiden uw team bij de implementatie van nieuwe strategieën en processen voor een vlotte transitie.</p></div>
+       <div class="services-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
+  <div class="card service-detail-card">
+    <h3>Strategie & Management</h3>
+    <p>Van het uitwerken van een complete bedrijfsstrategie en het optimaliseren van uw businessmodel tot algemeen managementadvies.</p>
+  </div>
+  <div class="card service-detail-card">
+    <h3>Sales & Performance</h3>
+    <p>We helpen uw salesprocessen op te starten en te verbeteren door salestrainingen voor teams en het opstellen van heldere KPI's.</p>
+  </div>
+  <div class="card service-detail-card">
+    <h3>Operationele Efficiëntie</h3>
+    <p>Analyse en verbetering van uw dagelijkse werking om kosten te verlagen en de productiviteit te verhogen, ondersteund door benchmarking.</p>
+  </div>
+  <div class="card service-detail-card">
+    <h3>Financiële Begeleiding</h3>
+    <p>Praktische financiële begeleiding, van analyse tot advies, om de winstgevendheid en financiële gezondheid van uw bedrijf te garanderen.</p>
+  </div>
+  <div class="card service-detail-card">
+    <h3>Innovatie & Toekomstbestendigheid</h3>
+    <p>We maken uw bedrijf futureproof door te focussen op innovatiebegeleiding en de integratie van duurzaamheid in uw kernprocessen.</p>
+  </div>
+  <div class="card service-detail-card">
+    <h3>Business Coaching voor Starters</h3>
+    <p>Specifieke ondersteuning voor beginnende zelfstandigen op fiscaal en financieel vlak, gecombineerd met marketingadvies voor een vliegende start.</p>
+  </div>
+</div>
         </div>
       </div>
     </section>
