--- a/diensten/consultancy.html
+++ b/diensten/consultancy.html
@@ -75,23 +75,23 @@
   </div>
   <div class="card service-detail-card">
     <h3>Sales & Performance</h3>
-    <p>We helpen uw salesprocessen op te starten en te verbeteren door salestrainingen voor teams en het opstellen van heldere KPI's.</p>
+    <p>We analyseren uw huidige verkoopproces en geven concrete tips om uw sales te verbeteren en de resultaten te verhogen.</p>
   </div>
   <div class="card service-detail-card">
     <h3>Operationele Efficiëntie</h3>
-    <p>Analyse en verbetering van uw dagelijkse werking om kosten te verlagen en de productiviteit te verhogen, ondersteund door benchmarking.</p>
+    <p>Analyse en verbetering van uw dagelijkse werking om kosten te verlagen en de productiviteit te verhogen.</p>
   </div>
   <div class="card service-detail-card">
     <h3>Financiële Begeleiding</h3>
-    <p>Praktische financiële begeleiding, van analyse tot advies, om de winstgevendheid en financiële gezondheid van uw bedrijf te garanderen.</p>
+    <p>Praktische financiële begeleiding, van analyse tot advies, om de winstgevendheid en financiële gezondheid van uw bedrijf te versterken.</p>
   </div>
   <div class="card service-detail-card">
     <h3>Innovatie & Toekomstbestendigheid</h3>
-    <p>We maken uw bedrijf futureproof door te focussen op innovatiebegeleiding en de integratie van duurzaamheid in uw kernprocessen.</p>
+    <p>We maken uw bedrijf futureproof door te focussen op innovatiebegeleiding in uw kernprocessen.</p>
   </div>
   <div class="card service-detail-card">
-    <h3>Business Coaching voor Starters</h3>
-    <p>Specifieke ondersteuning voor beginnende zelfstandigen op fiscaal en financieel vlak, gecombineerd met marketingadvies voor een vliegende start.</p>
+    <h3>Integrale Coaching voor Starters</h3>
+    <p>Van businessplan tot eerste factuur. We bieden allround begeleiding voor beginnende zelfstandigen op strategisch, financieel en commercieel vlak, zodat je met vertrouwen kunt ondernemen.</p>
   </div>
 </div>
         </div>
