--- a/diensten/consultancy.html
+++ b/diensten/consultancy.html
@@ -74,7 +74,7 @@
     <p>Van het uitwerken van een complete bedrijfsstrategie en het optimaliseren van uw businessmodel tot algemeen managementadvies.</p>
   </div>
   <div class="card service-detail-card">
-    <h3>Sales & Performance</h3>
+    <h3>Sales</h3>
     <p>We analyseren uw huidige verkoopproces en geven concrete tips om uw sales te verbeteren en de resultaten te verhogen.</p>
   </div>
   <div class="card service-detail-card">
