--- a/bedankt.html
+++ b/bedankt.html
@@ -8,57 +8,83 @@
   <meta name="description" content="Bedankt voor je bericht. We nemen binnen één werkdag contact met je op." />
   <meta name="robots" content="noindex, nofollow" />
   <link rel="canonical" href="https://buscemigroup.be/bedankt.html" />
-  <meta name="theme-color" content="#0d1425" />
+  <meta name="theme-color" content="#0a3d2c" />
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
 
-  <!-- Styles -->
   <link rel="stylesheet" href="/style.css" />
-  <link rel="stylesheet" href="/utilities.css" />
 
-  <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Bedankt — Buscemi Group" />
-  <meta property="og:description" content="We antwoorden binnen 1 werkdag. Wil je sneller? Plan meteen een kennismaking." />
+  <meta property="og:description" content="We hebben uw bericht goed ontvangen en antwoorden binnen 1 werkdag." />
   <meta property="og:site_name" content="Buscemi Group" />
   <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
 
-  <!-- Kleine pagina-specifieke accenten -->
   <style>
-    .thanks-hero{padding:clamp(48px,8vw,120px) 0;text-align:center}
-    .thanks-hero .kicker{opacity:.8;margin:0 0 8px}
-    .thanks-hero h1{margin:.2em 0}
-    .next-steps{margin-top:24px}
-    .next-steps li{margin:.35rem 0}
-    .cta-row{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:20px}
-    .panel{max-width:860px;margin:32px auto 0}
-    .card.center{text-align:center}
+    .thanks-hero {
+      padding: clamp(5rem, 10vw, 8rem) 0;
+      text-align: center;
+      background-color: var(--surface);
+      border-bottom: 1px solid var(--border);
+    }
+    .thanks-hero h1 {
+      margin: 0.2em 0;
+    }
+    .cta-row {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 2.5rem;
+    }
+    .panel {
+      max-width: 760px;
+      margin: 4rem auto 0;
+      padding: 2.5rem;
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      background: var(--bg);
+      text-align: center;
+    }
+    .panel h2 {
+        font-family: var(--font-sans);
+        font-weight: 600;
+        font-size: 1.5rem;
+        margin-bottom: 1.5rem;
+    }
+    .next-steps {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      text-align: left;
+      display: inline-block;
+    }
+    .next-steps li {
+      display: flex;
+      align-items: flex-start;
+      gap: 1rem;
+      margin-bottom: 1.25rem;
+    }
+    .next-steps li:last-child {
+        margin-bottom: 0;
+    }
+    .next-steps svg {
+      flex-shrink: 0;
+      margin-top: 5px;
+      color: var(--brand);
+    }
   </style>
 </head>
 <body>
-  <a class="visually-hidden skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-  <!-- Header/nav -->
   <header class="site-header">
-    <div class="container nav">
+    <div class="container nav-container">
       <a class="brand" href="/">
         <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
       </a>
-
-      <button class="burger"
-              data-nav-toggle
-              aria-label="Hoofdmenu"
-              aria-expanded="false"
-              aria-controls="site-menu">☰</button>
-
-      <nav id="site-menu"
-           class="nav-links"
-           data-nav-menu
-           aria-label="Hoofdnavigatie"
-           aria-hidden="true">
+      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie">
         <ul class="menu">
           <li><a href="/over.html" data-nav-link>Over</a></li>
           <li>
@@ -74,54 +100,60 @@
           <li><a href="/contact.html" data-nav-link>Contact</a></li>
         </ul>
       </nav>
-
       <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
+      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu"></button>
     </div>
   </header>
 
   <main id="main">
     <section class="thanks-hero">
       <div class="container">
-        <p class="kicker">Bedankt!</p>
-        <h1>We hebben je bericht ontvangen</h1>
-        <p class="sub">We antwoorden <strong>binnen 1 werkdag</strong>. Wil je het proces versnellen? Plan meteen een kort kennismakingsgesprek.</p>
+        <h1>Bedankt voor je bericht</h1>
+        <p class="sub">We hebben alles goed ontvangen en antwoorden gegarandeerd <strong>binnen één werkdag</strong>.</p>
         <div class="cta-row">
-          <a class="btn" href="https://calendly.com/jouw-calendly/intro" target="_blank" rel="noopener">Plan kennismaking</a>
-          <a class="btn alt" href="/">Terug naar home</a>
+          <a class="btn" href="https://calendly.com/" target="_blank" rel="noopener">Plan direct een gesprek</a>
+          <a class="btn alt" href="/">Terug naar de homepage</a>
         </div>
 
         <div class="panel">
-          <div class="card pad center">
-            <h2 class="mt-0">Wat je nu kan doen</h2>
-            <ul class="next-steps muted" style="list-style:disc; text-align:left; display:inline-block;">
-              <li>Check je mailbox — we sturen je een bevestiging en komen snel bij je terug.</li>
-              <li>Voeg ons toe aan je contacten: <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a> (zo vermijden we spamfilters).</li>
-              <li>Heb je al een concrete briefing of bestanden? Reply op de bevestigingsmail met je bijlagen.</li>
-            </ul>
-            <p class="muted" style="margin-top:12px">
-              Liever telefonisch? Bel ons op <a href="tel:+324XXXXXXXX">+32 4X XX XX XXX</a>.
-            </p>
-          </div>
+          <h2>Wat nu?</h2>
+          <ul class="next-steps muted">
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="m9 12 2 2 4-4"/></svg>
+              <span>We bekijken uw vraag intern en komen zo snel mogelijk bij u terug met een antwoord of voorstel.</span>
+            </li>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
+              <span>Dringende vraag? U kan ons rechtstreeks bereiken op <a href="tel:+32470713251">+32 470 71 32 51</a>.</span>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container flex justify-between items-center gap-12 flex-wrap">
-      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-      <div class="muted">
-        <a href="/legal.html">Privacy</a> • <a href="/legal.html">Cookies</a> • <a href="/legal.html">Algemene voorwaarden</a>
+    <div class="container footer-container">
+      <div class="footer-brand">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
+        <p>Marketing & Consultancy voor KMO's.</p>
+      </div>
+      <div class="footer-links">
+        <a href="/legal.html">Privacy</a>
+        <a href="/legal.html#cookies">Cookies</a>
+        <a href="/legal.html#voorwaarden">Voorwaarden</a>
+      </div>
+      <div class="footer-info">
+        <p>&copy; <span id="year"></span> Buscemi Group</p>
+        <p>BE 1027.136.562</p>
       </div>
     </div>
   </footer>
 
-  <!-- Scripts -->
   <script src="/cookie.js" defer></script>
   <script src="/js/analytics.js" defer></script>
   <script src="/nav.js" defer></script>
 
-  <!-- Jaar in footer -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       var y=document.getElementById('year');
@@ -129,7 +161,5 @@
     });
   </script>
 
-  <!-- No-JS fallback -->
-  <noscript><style>[data-nav-menu]{display:block!important}</style></noscript>
 </body>
 </html>
