--- a/legal.html
+++ b/legal.html
@@ -165,6 +165,16 @@ Alle intellectuele eigendomsrechten op de door Buscemi Group ontwikkelde materia
 
 Op alle rechtsverhoudingen tussen Buscemi Group en de klant is het Belgisch recht van toepassing. Uitsluitend de rechtbanken van het arrondissement waar de maatschappelijke zetel van Buscemi Group gevestigd is, zijn bevoegd om kennis te nemen van eventuele geschillen.</p>
 </section>
+
+        <section id="bedrijfsgegevens">
+        <h2>Bedrijfsgegevens</h2>
+        <p>
+            <strong>Buscemi Group</strong><br>
+            Hoveniersstraat 23<br>
+            1840 Londerzeel<br>
+            België
+        </p>
+          </section>
     </article>
   </main>
 
