--- a/index.html
+++ b/index.html
@@ -140,23 +140,27 @@
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-container">
-      <div class="footer-brand">
-        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
-       
-      </div>
-      <div class="footer-links">
-        <a href="/legal.html">Privacy</a>
-        <a href="/legal.html#cookies">Cookies</a>
-        <a href="/legal.html#voorwaarden">Voorwaarden</a>
-      </div>
-      <div class="footer-info">
-        <p>&copy; <span id="year"></span> Buscemi Group</p>
-        <p>BE 1027.136.562</p>
-      </div>
+<footer class="site-footer">
+  <div class="container footer-container">
+    <div class="footer-brand">
+      <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
     </div>
-  </footer>
+    <div class="footer-links">
+      <a href="/legal.html">Privacy</a>
+      <a href="/legal.html#cookies">Cookies</a>
+      <a href="/legal.html#voorwaarden">Voorwaarden</a>
+    </div>
+    <div class="footer-info">
+      <p>
+        &copy; <span id="year"></span> Buscemi Group – Alle rechten voorbehouden<br>
+        Buscemi, Ilian – eenmanszaak<br>
+        Handelsnaam: Buscemi Group<br>
+        Ondernemingsnummer: 1027.136.562 – BTW BE 1027.136.562<br>
+        Adres: [Straat + nr], 1840 Londerzeel, België
+      </p>
+    </div>
+  </div>
+</footer>
 
   <script src="/cookie.js" defer></script>
   <script src="/js/analytics.js" defer></script>
