--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
       <p>
         &copy; <span id="year"></span> Buscemi Group – Alle rechten voorbehouden<br>
         Buscemi, Ilian – eenmanszaak<br>
-        Handelsnaam: Buscemi Group<br>
-        Ondernemingsnummer: 1027.136.562 – BTW BE 1027.136.562<br>
-        Adres: [Straat + nr], 1840 Londerzeel, België
+        Buscemi Group<br>
+        KBO: 1027.136.562<br>
+        Hoveniersstraat 23, 1840 Londerzeel, België
       </p>
     </div>
   </div>
