--- a/legal.html
+++ b/legal.html
@@ -170,6 +170,7 @@ Op alle rechtsverhoudingen tussen Buscemi Group en de klant is het Belgisch rech
         <h3>Bedrijfsgegevens</h3>
         <p>
             <strong>Buscemi Group</strong><br>
+            Buscemi Ilian - Eenmanszaak<br>
             Hoveniersstraat 23<br>
             1840 Londerzeel<br>
             België
