--- a/legal.html
+++ b/legal.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl-BE">
 <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-D3JNSNPKPG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-D3JNSNPKPG', { 'send_page_view': false }); // OPGELOST: Voorkomt automatische tracking
-</script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Juridische Informatie | Buscemi Group</title>
@@ -29,24 +21,13 @@
   <meta property="og:description" content="Privacy, cookies en voorwaarden." />
   <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
   <style>
-    /* Stijlen voor de juridische pagina */
-    .legal-content {
-      padding-top: 3rem;
-      padding-bottom: 5rem;
-      max-width: 800px;
-      margin: auto;
-    }
-    .legal-content h2 {
-      margin-top: 3rem;
-      padding-bottom: 0.5rem;
-      border-bottom: 1px solid var(--border);
-    }
-    .legal-content h2:first-of-type {
-      margin-top: 0;
-    }
-    .legal-content p:last-child {
-        margin-bottom: 0;
-    }
+    .legal-content { padding-top: 3rem; padding-bottom: 5rem; max-width: 900px; margin: auto; }
+    .legal-content h2 { margin-top: 3rem; padding-bottom: .5rem; border-bottom: 1px solid var(--border); }
+    .legal-content h2:first-of-type { margin-top: 0; }
+    .legal-content h3 { margin-top: 1.5rem; }
+    .legal-content table { width: 100%; border-collapse: collapse; margin-top: .75rem; }
+    .legal-content th, .legal-content td { text-align: left; padding: .5rem; border-bottom: 1px solid var(--border); vertical-align: top; }
+    .legal-content code { background: rgba(0,0,0,.04); padding: .1rem .25rem; border-radius: .25rem; }
   </style>
 </head>
 <body>
@@ -86,119 +67,201 @@
     </section>
 
     <article class="legal-content">
-     <section id="privacy">
-<h2>Privacybeleid</h2>
-<p><strong>Laatst bijgewerkt op: 7 oktober 2025</strong></p>
-<p>Buscemi Group hecht groot belang aan uw privacy. Dit privacybeleid beschrijft welke persoonlijke gegevens we verzamelen en hoe we deze gebruiken, delen en beschermen.</p>
 
-<h3>Welke gegevens verzamelen we?</h3>
-<p>We kunnen de volgende informatie verzamelen wanneer u onze website gebruikt of contact met ons opneemt:</p>
-<ul>
-<li><strong>Contactinformatie:</strong> Uw naam, e-mailadres, en eventueel uw bedrijfsnaam, die u ons verstrekt via het contactformulier.</li>
-<li><strong>Analytische gegevens:</strong> Anonieme gegevens over uw surfgedrag, zoals de pagina's die u bezoekt en de duur van uw bezoek. Deze gegevens worden verzameld via Google Analytics, zoals gespecificeerd in ons cookiebeleid.</li>
-</ul>
+      <!-- =====================================
+           PRIVACY
+      ====================================== -->
+      <section id="privacy">
+        <h2>Privacybeleid</h2>
+        <p><strong>Laatst bijgewerkt: 8 oktober 2025</strong></p>
 
-<h3>Hoe gebruiken we uw gegevens?</h3>
-<p>De verzamelde gegevens worden gebruikt voor de volgende doeleinden:</p>
-<ul>
-<li>Om te reageren op uw vragen en verzoeken die via het contactformulier worden ingediend.</li>
-<li>Om onze website en diensten te verbeteren door het analyseren van anonieme gebruikersstatistieken.</li>
-<li>Om te voldoen aan onze wettelijke en reglementaire verplichtingen.</li>
-</ul>
-
-<h3>Uw rechten</h3>
-<p>U heeft het recht om uw persoonlijke gegevens in te zien, te corrigeren of te laten verwijderen. U kunt hiervoor contact met ons opnemen via <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a>. We zullen uw verzoek binnen een redelijke termijn behandelen.</p>
-</section>
-      </section>
-
-      
-       <section id="cookies">
-<h2>Cookiebeleid</h2>
-<p>Onze website gebruikt cookies om uw gebruikerservaring te verbeteren. Een cookie is een klein tekstbestand dat op uw computer wordt opgeslagen. Hieronder leggen we uit welke cookies we gebruiken.</p>
-
-<h3>Soorten cookies</h3>
-<ul>
-<li><strong>Functionele cookies:</strong> Deze zijn noodzakelijk voor de basisfunctionaliteit van de website. We gebruiken een functionele cookie om uw cookie-voorkeuren op te slaan, zodat u deze niet bij elk bezoek opnieuw hoeft in te stellen.</li>
-<li><strong>Analytische cookies:</strong> We gebruiken Google Analytics om anoniem te meten hoe bezoekers onze website gebruiken. Dit helpt ons om de website te verbeteren. De tracking wordt pas geactiveerd na uw expliciete toestemming.</li>
-</ul>
-
-<h3>Beheer uw voorkeuren</h3>
-<p>U kunt uw cookie-instellingen op elk moment wijzigen. Klik op de onderstaande link om uw voorkeuren aan te passen.</p>
-<p><strong><a href="#" id="manage-consent">Beheer cookie-voorkeuren</a></strong></p>
-</section>
-      </section>
-      
-   <section id="voorwaarden">
-<h2>Algemene Voorwaarden</h2>
-<p><strong>1. Toepasselijkheid</strong>
-
-
-Deze algemene voorwaarden zijn van toepassing op alle diensten, offertes en overeenkomsten van Buscemi Group, tenzij schriftelijk anders is overeengekomen.</p>
-
-<p><strong>2. Offertes en overeenkomsten</strong>
-
-
-Alle offertes zijn vrijblijvend. Een overeenkomst komt tot stand op het moment dat de door de klant ondertekende offerte door Buscemi Group is ontvangen en aanvaard.</p>
-
-<p><strong>3. Uitvoering van de dienstverlening</strong>
-
-
-Buscemi Group zal zich naar beste vermogen inspannen om de diensten met zorg uit te voeren. De opgegeven termijnen zijn indicatief en niet bindend.</p>
-
-<p><strong>4. Tarieven en betaling</strong>
-
-
-De tarieven worden vastgelegd in de offerte. Facturen zijn betaalbaar binnen 30 dagen na factuurdatum. Bij niet-tijdige betaling is van rechtswege en zonder ingebrekestelling een verwijlinterest verschuldigd.</p>
-
-<p><strong>5. Aansprakelijkheid</strong>
-
-
-De aansprakelijkheid van Buscemi Group is beperkt tot het bedrag dat in het desbetreffende geval door haar beroepsaansprakelijkheidsverzekering wordt uitgekeerd. Buscemi Group is nooit aansprakelijk voor indirecte schade, zoals gederfde winst.</p>
-
-<p><strong>6. Intellectuele eigendom</strong>
-
-
-Alle intellectuele eigendomsrechten op de door Buscemi Group ontwikkelde materialen (strategieën, rapporten, creaties) blijven eigendom van Buscemi Group, tenzij anders overeengekomen.</p>
-
-<p><strong>7. Toepasselijk recht en geschillen</strong>
-
-
-Op alle rechtsverhoudingen tussen Buscemi Group en de klant is het Belgisch recht van toepassing. Uitsluitend de rechtbanken van het arrondissement waar de maatschappelijke zetel van Buscemi Group gevestigd is, zijn bevoegd om kennis te nemen van eventuele geschillen.</p>
-</section>
-
-        <section id="bedrijfsgegevens">
-        <h3>Bedrijfsgegevens</h3>
+        <h3>1. Wie zijn wij?</h3>
         <p>
-            <strong>Buscemi Group</strong><br>
-            Buscemi Ilian - Eenmanszaak<br>
-            Hoveniersstraat 23<br>
-            1840 Londerzeel<br>
-            België
+          Buscemi, Ilian – eenmanszaak<br/>
+          Handelsnaam: Buscemi Group<br/>
+          Ondernemingsnummer: 1027.136.562 – <strong>BTW BE 1027.136.562</strong><br/>
+          Adres: Hoveniersstraat 23, 1840 Londerzeel, België<br/>
+          E-mail: <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a>
         </p>
-          </section>
+
+        <h3>2. Welke persoonsgegevens verzamelen we?</h3>
+        <ul>
+          <li><strong>Contactformulier:</strong> naam, e-mailadres, bericht.</li>
+          <li><strong>Google Analytics (na toestemming):</strong> geanonimiseerd IP, apparaat-/browserinfo, bezochte pagina’s en sessiedata (via cookies).</li>
+          <li><strong>Klantadministratie (bij opdrachten):</strong> identificatie- en facturatiegegevens die wettelijk nodig zijn.</li>
+        </ul>
+
+        <h3>3. Doeleinden en rechtsgronden</h3>
+        <ul>
+          <li><strong>Beantwoorden van contactaanvragen</strong> – gerechtvaardigd belang (art. 6(1)(f) GDPR).</li>
+          <li><strong>Offertes, facturatie en boekhouding</strong> – wettelijke verplichting (art. 6(1)(c) GDPR).</li>
+          <li><strong>Webstatistieken met Google Analytics</strong> – toestemming (art. 6(1)(a) GDPR).</li>
+        </ul>
+
+        <h3>4. Bewaartermijnen</h3>
+        <ul>
+          <li>Contactaanvragen: max. 12 maanden.</li>
+          <li>Klant- en facturatiegegevens: 7 jaar (boekhoudplicht).</li>
+          <li>Google Analytics: 14 maanden.</li>
+        </ul>
+
+        <h3>5. Ontvangers/verwerkers</h3>
+        <ul>
+          <li><strong>Hostingprovider</strong> (website/e-mail) – verwerking binnen de EU/EER.</li>
+          <li><strong>Google LLC</strong> (Analytics) – zie internationale doorgifte.</li>
+        </ul>
+        <p>Wij verkopen geen persoonsgegevens aan derden.</p>
+
+        <h3>6. Internationale doorgifte</h3>
+        <p>
+          Voor Google Analytics kan verwerking plaatsvinden buiten de EU/EER (Verenigde Staten). Wij baseren deze
+          doorgifte op de <em>Standard Contractual Clauses</em> (SCC’s) van de Europese Commissie. IP-anonimisering is
+          geactiveerd. Verwerking voor Analytics start pas <strong>nadat je toestemming geeft via de cookie-banner</strong>.
+        </p>
+
+        <h3>7. Jouw rechten</h3>
+        <p>Je hebt het recht op inzage, rectificatie, wissen, beperking, overdraagbaarheid, bezwaar en het intrekken van toestemming. Contact: <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a>.</p>
+        <p>
+          Klachten? Neem contact op met de <strong>Gegevensbeschermingsautoriteit</strong> (GBA):<br/>
+          <a href="https://www.gegevensbeschermingsautoriteit.be" rel="noopener">https://www.gegevensbeschermingsautoriteit.be</a>
+        </p>
+
+        <h3>8. Beveiliging</h3>
+        <p>We nemen passende technische en organisatorische maatregelen (o.a. SSL/TLS, toegangsbeheer, back-ups) om je gegevens te beschermen.</p>
+      </section>
+
+      <!-- =====================================
+           COOKIES
+      ====================================== -->
+      <section id="cookies">
+        <h2>Cookiebeleid</h2>
+        <p>Onze website gebruikt cookies. Voor niet-essentiële cookies (zoals Analytics) vragen we eerst je toestemming.</p>
+
+        <h3>1. Soorten cookies</h3>
+        <ul>
+          <li><strong>Functionele cookies</strong> – noodzakelijk voor basiswerking (zoals het onthouden van je cookie-keuze).</li>
+          <li><strong>Analytische cookies</strong> – <em>alleen na toestemming</em>; we gebruiken Google Analytics om het gebruik van de website te meten en te verbeteren.</li>
+        </ul>
+
+        <h3>2. Cookietabel</h3>
+        <p>Onderstaande lijst is indicatief; de exacte namen/duur kunnen door Google worden aangepast. We houden deze tabel up-to-date.</p>
+        <table aria-label="Overzicht cookies">
+          <thead>
+            <tr>
+              <th>Naam</th>
+              <th>Doel</th>
+              <th>Type</th>
+              <th>Bewaartermijn</th>
+              <th>Provider</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><code>cookie_consent</code></td>
+              <td>Onthoudt of en hoe je cookies accepteert/weigert.</td>
+              <td>Functioneel</td>
+              <td>6–12 maanden</td>
+              <td>Eigen domein</td>
+            </tr>
+            <tr>
+              <td><code>_ga</code></td>
+              <td>Gebruiker onderscheiden voor statistieken (geanonimiseerd).</td>
+              <td>Analytisch</td>
+              <td>14 maanden</td>
+              <td>Google Analytics</td>
+            </tr>
+            <tr>
+              <td><code>_ga_*</code></td>
+              <td>Sessie/visit meting per property.</td>
+              <td>Analytisch</td>
+              <td>14 maanden</td>
+              <td>Google Analytics</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <h3>3. Beheer je voorkeuren</h3>
+        <p>
+          Je kan je cookie-voorkeuren op elk moment wijzigen of intrekken. Klik hieronder om je instellingen te openen:
+        </p>
+        <p><a href="#" id="manage-consent"><strong>Beheer cookie-voorkeuren</strong></a></p>
+        <p>Als je Analytics weigert, worden de betreffende scripts niet geladen en plaatsen we geen analytische cookies.</p>
+      </section>
+
+      <!-- =====================================
+           ALGEMENE VOORWAARDEN (compact maar compleet)
+      ====================================== -->
+      <section id="voorwaarden">
+        <h2>Algemene Voorwaarden</h2>
+
+        <h3>1. Toepasselijkheid</h3>
+        <p>Deze voorwaarden gelden voor alle diensten, offertes en overeenkomsten van Buscemi Group, tenzij schriftelijk anders overeengekomen.</p>
+
+        <h3>2. Offertes en overeenkomsten</h3>
+        <p>Offertes zijn vrijblijvend. Een overeenkomst ontstaat wanneer een door de klant aanvaarde offerte door Buscemi Group schriftelijk (incl. e-mail) is bevestigd.</p>
+
+        <h3>3. Diensten & uitvoering</h3>
+        <p>Wij leveren diensten op inspanningsverbintenis. Termijnen zijn indicatief. De klant verstrekt tijdig juiste informatie en medewerking.</p>
+
+        <h3>4. Tarieven & betaling</h3>
+        <p>Tarieven staan in de offerte. Facturen zijn betaalbaar binnen 30 dagen. Bij laattijdige betaling zijn van rechtswege nalatigheidsinteresten en invorderingskosten verschuldigd conform de Wet Betalingsachterstand (B2B).</p>
+
+        <h3>5. Intellectuele eigendom</h3>
+        <p>Alle IE-rechten op door ons geleverde materialen blijven bij Buscemi Group, tenzij schriftelijk anders overeengekomen. De klant krijgt een gebruiksrecht voor het overeengekomen doel.</p>
+
+        <h3>6. Vertrouwelijkheid & gegevens</h3>
+        <p>Partijen bewaren de vertrouwelijkheid van elkaars bedrijfs- en persoonsgegevens. Indien Buscemi Group persoonsgegevens van de klant verwerkt als verwerker, sluiten partijen een verwerkersovereenkomst.</p>
+
+        <h3>7. Aansprakelijkheid</h3>
+        <p>Onze aansprakelijkheid is beperkt tot de directe schade en maximaal tot het door onze aansprakelijkheidsverzekering uitbetaalde bedrag; geen aansprakelijkheid voor gevolgschade zoals winstderving.</p>
+
+        <h3>8. Beëindiging</h3>
+        <p>Elke partij kan de overeenkomst beëindigen bij zware tekortkoming na ingebrekestelling en redelijke hersteltermijn. Reeds geleverde prestaties worden afgerekend.</p>
+
+        <h3>9. Toepasselijk recht & bevoegde rechtbank</h3>
+        <p>Belgisch recht is van toepassing. Bevoegd zijn de rechtbanken van het arrondissement van onze maatschappelijke zetel (RPR, indien van toepassing).</p>
+      </section>
+
+      <!-- =====================================
+           BEDRIJFSGEGEVENS (duidelijk zichtbaarheid)
+      ====================================== -->
+      <section id="bedrijfsgegevens">
+        <h2>Bedrijfsgegevens</h2>
+        <p>
+          <strong>Buscemi Group</strong><br>
+          Buscemi, Ilian – eenmanszaak<br>
+          Ondernemingsnummer: 1027.136.562 – <strong>BTW BE 1027.136.562</strong><br>
+          Hoveniersstraat 23, 1840 Londerzeel, België<br>
+          E-mail: <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a>
+        </p>
+      </section>
     </article>
   </main>
 
-<footer class="site-footer">
-  <div class="container footer-container">
-    <div class="footer-brand">
-      <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
+  <footer class="site-footer">
+    <div class="container footer-container">
+      <div class="footer-brand">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
+      </div>
+      <div class="footer-links">
+        <a href="/legal.html#privacy">Privacy</a>
+        <a href="/legal.html#cookies">Cookies</a>
+        <a href="/legal.html#voorwaarden">Voorwaarden</a>
+      </div>
+      <div class="footer-info">
+        <p>
+          &copy; <span id="year"></span> Buscemi Group – Alle rechten voorbehouden<br>
+          Ondernemingsnummer: 1027.136.562 – <strong>BTW BE 1027.136.562</strong><br>
+          Hoveniersstraat 23, 1840 Londerzeel, België
+        </p>
+      </div>
     </div>
-    <div class="footer-links">
-      <a href="/legal.html">Privacy</a>
-      <a href="/legal.html#cookies">Cookies</a>
-      <a href="/legal.html#voorwaarden">Voorwaarden</a>
-    </div>
-    <div class="footer-info">
-      <p>
-        &copy; <span id="year"></span> Buscemi Group – Alle rechten voorbehouden<br>
-        KBO: 1027.136.562<br>
-        Hoveniersstraat 23, 1840 Londerzeel, België
-      </p>
-    </div>
-  </div>
-</footer>
+  </footer>
 
+  <!-- Belangrijk:
+       - /cookie.js moet de banner + consent toggles tonen, en bij weigeren Analytics blokkeren.
+       - /js/analytics.js mag Google Analytics pas initialiseren NA toestemming.
+  -->
   <script src="/cookie.js" defer></script>
   <script src="/js/analytics.js" defer></script>
   <script src="/nav.js" defer></script>
