--- a/insights/index.html
+++ b/insights/index.html
@@ -8,7 +8,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-D3JNSNPKPG');
+  gtag('config', 'G-D3JNSNPKPG', { 'send_page_view': false });
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
