--- a/over.html
+++ b/over.html
@@ -65,11 +65,11 @@
 
     <section class="content-section section">
       <div class="container about-layout">
-        <div class="about-content">
-          <h2>Gedreven door resultaat</h2>
-          <p class="lead">Onze aanpak combineert jarenlange managementervaring in KMO's met diepgaande marketingexpertise. Hierdoor ontwikkelen we strategieën die niet alleen ambitieus zijn, maar vooral uitvoerbaar en rendabel.</p>
-          <p>We meten succes aan de hand van uw groei: in omzet, marge en efficiëntie. Transparantie en samenwerking vormen de kern van onze dienstverlening. We functioneren als een verlengstuk van uw team, met een gedeelde focus op uw bedrijfsdoelstellingen. We luisteren, analyseren en handelen — altijd met uw succes als einddoel.</p>
-        </div>
+       <div class="about-content">
+  <h2>Gedreven door Passie en Praktijk</h2>
+  <p class="lead">Onze aanpak is geworteld in een diepgaand begrip van de KMO-wereld, gecombineerd met een frisse, analytische blik. We brengen strategische modellen tot leven met praktische ervaring, opgedaan aan de frontlinie van verkoop en klantrelaties. Dit stelt ons in staat om plannen te ontwikkelen die niet alleen ambitieus zijn, maar vooral uitvoerbaar en rendabel.</p>
+  <p>Wij geloven dat échte groei ontstaat waar data en menselijkheid samenkomen. Succes meten we aan uw resultaten: in omzet, marge en efficiëntie. Transparantie en samenwerking vormen de kern van onze dienstverlening. We functioneren als een verlengstuk van uw team, met een gedeelde passie voor uw bedrijfsdoelstellingen. We luisteren, analyseren en handelen — altijd met uw succes als einddoel.</p>
+</div>
         <div class="about-features">
            <ul class="feature-list">
             <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="m9 12 2 2 4-4"/></svg> <span><strong>Integrale aanpak</strong><br>Strategie en uitvoering onder één dak.</span></li>
