--- a/diensten/marketing.html
+++ b/diensten/marketing.html
@@ -78,7 +78,7 @@
     <p>De focus ligt op online resultaat. Van strategie en contentcreatie tot het opzetten van gerichte advertentiecampagnes.</p>
   </div>
   <div class="card service-detail-card">
-    <h3>SEO (Zoekmachineoptimalisatie)</h3>
+    <h3>SEO</h3>
     <p>We verbeteren uw vindbaarheid in Google, zodat potentiële klanten u organisch vinden wanneer ze u nodig hebben.</p>
   </div>
   <div class="card service-detail-card">
